--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-
-
   "name": "weatherappinreact",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://sameerkpathan.github.io/weatherappinreactjs",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -15,7 +14,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
